# lora-usb

./: .gitignore  CMakeLists.txt  README.md
libs/: bytebuffer.cmake  cat.cmake  something.cmake  stm32_usb.cmake  stm32f7.cmake  sx126x_driver.cmake
libs/byte_buffer/: ring_buffer.c  ring_buffer.h
libs/liblora/: libLora.h
libs/shell/: shell.c  shellVt100.h
libs/sx126x/: sx126x.c  sx126x.h  sx126xBuffer.c  sx126xBuffer.h  sx126xCommand.c  sx126xCommand.h  sx126xRegister.c  sx126xRegister.h  sx126xTypes.h
src/: at.c  at.h  bootloader.c  bootloader.h  main.c  main.h
src/byte_buffer/: boardStdio.c  boardStdio.h
src/nucleo-f756zg/: STM32F756ZGTx_FLASH.ld  gpio.c  gpio.h  nucleo-f756zg.c  nucleo-f756zg.h  spi.c  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_hal_msp.c  stm32f7xx_it.c  usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
src/radio/: apps_common.c  apps_common.h  apps_configuration.h  apps_utilities.h  smtc_hal_dbg_trace.c  smtc_hal_dbg_trace.h  smtc_shield_sx1261mb2bas.c  smtc_shield_sx1261mb2bas.h  smtc_shield_sx126x.h  smtc_shield_sx126x_types.h  sx126x_hal.c  sx126x_hal_context.h  sx126x_hal_options.h
src/shell/: boardShell.c  boardShell.h  shell.c  shell.h
